@@ -4,7 +4,7 @@
 	- make sure user can cancel thumbnails...
 + Screenshots (a la gsnapshot) (gtk.gdk.Pixbuf.get_from_drawable)
 + code cleanup... (preload_*, animtest stuff, rename funcs)
-+ update setup.py (like sonata)
++ remote images - load in separate thread to prevent blocking...
 
 1.0
 + Allow zooming in crop dialog (default to same view as main window so that
