@@ -1,6 +1,7 @@
 v0.9 - Pending
 	+ Thumbnails pane (freedesktop spec compliant)
 	+ Ability to open remote images (http and ftp)
+	+ Register viewed images with gtk's recent documents (ongardie)
 	+ Preference for opening hidden files
 	+ Bug: Filenames in custom actions aren't correctly escaped (Andrew)
 	+ Bug: Can't open properties on animated images
